--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,52 @@
 /*Schrijf hier jouw css voor jouw formulier*/
+div {
+    width: 400px;
+    padding: 10px;
+}
+
+.reviewContainer input {
+    padding: 8px;
+    margin: 6px;
+    width: 300px;
+    font-size: 18px;
+    outline: none;
+}
+
+.gegevensContainer{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+/*    border: 5px ridge gray;*/
+}
+
+.reviewContainer {
+    display: flex;
+    flex-direction: column;
+/*    border: 10px ridge gray;*/
+    justify-content: space-between;
+    padding: 10px;
+    margin-top: 30px;
+}
+
+.gegevensContainer input {
+    margin-left: 10px;
+}
+
+label {
+    padding: 6px;
+    margin-top: 10px;
+}
+
+button {
+    margin-top: 20px;
+    width: 25%;
+}
+
+fieldset {
+    border: 2px solid lightgray;
+    border-radius: 5px;
+}
+
+legend {
+    font-weight: bold;
+}
